--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "destination": "https://royce-server-production.up.railway.app/api/$1"
     }
   ]
 }
+
